// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HRSStatistics Component Render the HRSStatistics Component having populated props with no errors 1`] = `
<HRSStatistics
  proposals={
    Array [
      Object {
        "instruments": Object {
          "bvit": Array [
            Object {
              "type": "BVIT",
            },
          ],
          "hrs": Array [
            Object {
              "exposureMode": "HIGH RESOLUTION",
            },
          ],
          "rss": Array [
            Object {
              "dictatorMode": "NORMAL",
              "mode": "Spectroscopy",
            },
          ],
          "scam": Array [
            Object {
              "dictatorMode": "NORMAL",
            },
          ],
        },
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2018-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Clear",
      },
      Object {
        "instruments": Object {
          "bvit": Array [
            Object {
              "type": "BVIT",
            },
          ],
          "hrs": Array [
            Object {
              "exposureMode": "HIGH RESOLUTION",
            },
          ],
          "rss": Array [
            Object {
              "dictatorMode": "NORMAL",
              "mode": "Spectroscopy",
            },
          ],
          "scam": Array [
            Object {
              "dictatorMode": "NORMAL",
            },
          ],
        },
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2017-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Thin cloud",
      },
    ]
  }
>
  <div
    className="stat-item"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <table
      className="stat-table"
    >
      <thead>
        <tr>
          <th>
            Exposure mode
          </th>
          <th>
            Number of configurations
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            HIGH RESOLUTION
          </td>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td>
            HIGH STABILITY
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            INT CAL FIBRE
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            LOW RESOLUTION
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            MEDIUM RESOLUTION
          </td>
          <td>
            0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</HRSStatistics>
`;

exports[`HRSStatistics Component Render the HRSStatistics Component having unpopulated props with no errors 1`] = `
<HRSStatistics
  proposals={Array []}
>
  <div
    className="stat-item"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <table
      className="stat-table"
    >
      <thead>
        <tr>
          <th>
            Exposure mode
          </th>
          <th>
            Number of configurations
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            HIGH RESOLUTION
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            HIGH STABILITY
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            INT CAL FIBRE
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            LOW RESOLUTION
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            MEDIUM RESOLUTION
          </td>
          <td>
            0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</HRSStatistics>
`;
